@@ -1,3 +1,6 @@
+dipole-20110325
++ new short-range potential (Buckingham) now available for electrostatic
+
 dipole-20110309
 + enhanced output for dipole-convergency 
 
